# shopier

./: .gitignore  Anchor.toml  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.data/: looks.db  watches.db
programs/digital-twin/: Cargo.toml
programs/digital-twin/src/: lib.rs
programs/spending-policy/: Cargo.toml
programs/spending-policy/src/: lib.rs
programs/stylist-marketplace/: Cargo.toml
programs/stylist-marketplace/src/: lib.rs
public/: manifest.webmanifest  robots.txt
scripts/: seed-demo.ts
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/app/agent/: page.tsx
src/app/architecture/: page.tsx
src/app/c/: page.tsx
src/app/looks/: page.tsx
src/app/preview/: page.tsx
src/app/share/: route.ts
src/app/stylists/: page.tsx
src/app/trending/: page.tsx
src/app/twin/: page.tsx
src/components/: AgentMap.tsx  BridgeModePill.tsx  DemoDisclaimer.tsx
src/components/agent/: AgentActivityPanel.tsx  RealTimeBanner.tsx  SpendingBoundBadge.tsx
src/components/architecture/: LivePdaPanel.tsx
src/components/layout/: Navbar.tsx  WalletMenu.tsx
src/components/live/: ActivityRail.tsx  FeaturedEventCard.tsx  HeroCtas.tsx  LiveTicker.tsx  SetupStatusWidget.tsx  VerticalsRow.tsx
src/lib/: activationsDb.ts  affiliate.ts  affiliateDb.ts  covalent.ts  creatorsDb.ts  dataDir.ts  eventsData.ts  googleShopping.ts  jupiter.ts  likenessDb.ts  lookSignature.ts  looksDb.ts  sessionKey.ts  shareCache.ts  sns.ts  solana.ts  treasury.ts  twinCrypto.ts  useAgentActivity.ts  useBridgeMode.ts  useJupiterQuote.ts  usePurchase.ts  useSessionDelegate.ts  useSetupStatus.ts  useTheme.ts  useTweenedTwin.ts  useTwin.ts  useWalletDisplay.ts  utils.ts  watchesDb.ts  zerion.ts
src/types/: index.ts
tests/: shopier.ts  tsconfig.json
(+60 files in other folders)
