[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Pin transitive deps that require edition2024 (not yet stabilized in Anchor's bundled cargo)
[workspace.dependencies]
blake3 = "=1.5.5"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
