[package]
name = "digital-twin"
version = "0.1.0"
description = "Shopier digital-twin program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "digital_twin"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
