[package]
name = "spending-policy"
version = "0.1.0"
description = "Shopier spending-policy program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spending_policy"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
