[package]
name = "stylist-marketplace"
version = "0.1.0"
description = "Shopier stylist-marketplace program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stylist_marketplace"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
